@@ -1,4 +1,5 @@
 current:
+  * add orientation detection fall back
   * fix captureReader not exposed to simulator
   * fix camera preview stale rotation corner
     - fix ZBarReaderViewController toolbar layout accomodation
